FIX: letter spacing for styling

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -33,7 +33,7 @@
 
   .usage {
     font-size: 60px;
-    letter-spacing: -10px;
+    letter-spacing: -5px;
   }
 
   .plan {
